# omp-cef

./: CMakePresets.json  README.md  UPSTREAM_GAP.md
.github/workflows/: build-and-publish.yml
src/client/core/: CMakeLists.txt  app.cpp  runtime.cpp
src/client/core/browser/: app.hpp  client.cpp  manager.cpp  manager.hpp
src/client/core/rendering/: render_manager.cpp  view.cpp  view.hpp  view_texture.cpp  view_texture.hpp  world_renderer.cpp  world_renderer.hpp
src/client/core/samp/components/: chat.cpp  chat.hpp  chat_view.hpp
src/client/core/samp/components/dl/: chat.cpp  chat.hpp
src/client/core/samp/components/r1/: chat.cpp  chat.hpp
src/client/core/samp/components/r3/: chat.cpp  chat.hpp
src/client/core/samp/components/r5/: chat.cpp  chat.hpp
src/client/core/system/: gta.hpp  resource_manager.cpp
src/client/loader/: CMakeLists.txt
src/client/renderer/: CMakeLists.txt  main.cpp
src/server/: cef.inc
src/server/common/: api.cpp  api.hpp  bridge.hpp  cef_event_handlers.cpp  cef_event_handlers.hpp  plugin.cpp  plugin.hpp  resource_download_dialog_manager.cpp  resource_download_dialog_manager.hpp  resource_manager.cpp  resource_manager.hpp
src/server/omp/: CMakeLists.txt  cef_extension_api.cpp  cef_extension_api.hpp  component.cpp  component.hpp  omg_bridge.cpp  omp_bridge.hpp
src/server/samp/: main.cpp  samp_bridge.cpp  samp_bridge.hpp
src/shared/: crypto.hpp  utils.hpp
tests/omp/: .gitignore
tests/omp/gamemodes/: pr-27.pwn
tests/omp/scriptfiles/cef/pr27_overlay/: blue.html  empty.html  index.html  red.html  red_redirect.html
